--- a/app/src/main/res/layout/activity_loading_ad.xml
+++ b/app/src/main/res/layout/activity_loading_ad.xml
@@ -12,6 +12,6 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_icon" />
 
 </LinearLayout>
