--- a/app/src/main/res/layout/activity_loading_ad.xml
+++ b/app/src/main/res/layout/activity_loading_ad.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".LoadingAdActivity">
+    tools:context="com.mobile.photoeffect.free.LoadingAdActivity">
 
     <ImageView
         android:layout_width="150dp"
